--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.2",
     "express": "^4.17.3",
+    "express-fileupload": "^1.3.1",
     "express-session": "^1.17.2",
     "mongoose": "^6.2.4",
     "nodemon": "^2.0.15",
