--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.3",
     "express-fileupload": "^1.3.1",
     "express-session": "^1.17.2",
+    "fetch": "^1.1.0",
     "mongoose": "^6.2.4",
     "nodemon": "^2.0.15",
     "twig": "^1.15.4"
